--- a/includes/_04_quickstart.adoc
+++ b/includes/_04_quickstart.adoc
@@ -17,6 +17,7 @@ Cherrytree's interface consists of four sections, highlighted in <<figure-4.01>>
 .Figure 4.01
 {interface}
 
+[[menu-bar]]
 ==== Menu Bar (Red)
 
 The menu bar contains the following menus:
@@ -32,14 +33,17 @@ The menu bar contains the following menus:
 * *Export* - Cherrytree documents can be exported to HTML, PDF, and Plain Text.
 * *Help* - Contains *Check for updates*, an *About* section, and a link to the online manual.
 
+[[toolbar]]
 ==== Toolbar (Purple)
 
 The toolbar has many commonly used options for managing nodes, formatting text, and inserting objects.
 
+[[tree-view]]
 ==== Tree View (Green)
 
 Cherrytree's tree view shows the document's hierarchical structure of nodes.
 
+[[editor]]
 ==== Editor (Yellow)
 
 The editor is used to read, write, edit, and delete notes. Click and hold the divider between the tree view and editor, then drag the mouse left or right to resize the two windows.
