--- a/includes/_07_text.adoc
+++ b/includes/_07_text.adoc
@@ -20,7 +20,28 @@ Automatic syntax highlighting styles text with a readable color scheme that corr
 
 ==== Choosing a Language
 
-Assign a language by opening the node properties menu, shown in <<figure-6.03>>, and choosing *Automatic Syntax Highlighting*. Then click the drop-down menu directly beneath it and choose from the list of link:#_supported_languages[supported languages].
+Assign a language by 
+[start=1]
+. opening the node properties menu, shown in <<figure-6.03>>
+. choosing *Automatic Syntax Highlighting*
+. clicking the drop-down menu directly beneath the node type options
+. chooosing from the list of link:#_supported_languages[supported languages].
+
+==== Executing a Node
+
+Nodes set to automatic syntax highlighting can be executed from Cherrytree, assuming you have its assigned language installed to your machine. 
+
+*To execute a the node:*
+[start=1]
+. Click *File*, located in the link:#menu-bar[menu bar].
+. Click *Execute Code*.
+. When prompted, click *OK* to confirm that you want to execute the code.
+
+Some languages will require a command to be assigned to the language before the code can be executed, shown in <<figure-7.02>>. Please see link:#_plain_text_and_code[*9.4 Plain Text and Code*] for details on assigning a command.
+
+[[figure-7.02]]
+.Figure 7.02
+{command-warning}
 
 ==== Supported Languages
 
@@ -112,12 +133,40 @@ Assign a language by opening the node properties menu, shown in <<figure-6.03>>,
 * yacc
 * yaml
 
+=== Editing
+
+Cherrytree provides editing functions which are available in the *Edit* menu, shown in <<figure-7.03>> or by right-clicking selected text within the link:#editor[editor].
+
+[[figure-7.03]]
+.Figure 7.03
+{edit-menu-partial}
+
+* *Undo* - Moves back by one change in the state of the document.
+* *Redo* - Moves forward by one change in the state of the document.
+* *Change Case* - Changes the {letter-case}[letter case] of the selected text.
+** *Lower Case of Selection/Word* - Converts every letter of the selected text to lowercase.
+** *Upper Case of Selection/Word* - Converts every letter of the selected text to uppercase.
+** *Toggle Case of Selection/Word* - Converts every letter of the selected text to the opposite state of its current {letter-case}[case].
+* *Enable/Disable Spell Check* - Toggle Cherrytree's spellcheck feature.
++
+NOTE: *Enchant* is required for this feature. Please install the this dependency if your application is built from source and you haven't already. See link:#_building_from_source[*3. Building from Source*] for instructions.
+
+* *Cut as Plain Text* - Moves the selected text, deprived of any styles it may have, to your clipboard. The text can then be pasted elsewhere.
+* *Copy as Plain Text* - Copies the selected text, deprived of any styles it may have, to your clipboard. A copy of the text can then be pasted elsewhere.
+* *Paste as Plain Text* - Inserts text, deprived of any styles it may have had, from your clipboard to the cursor location.
+* *Cut Row* - Moves the current line of text to your clipboard. The line can then be pasted elsewhere.
+* *Copy Row* - Copies the current line of text to your clipboard. A copy of the line can then be pasted elsewhere.
+* *Delete Row* - Delete the current line of text.
+* *Duplicate Row* - Paste a copy of the current line of text to the following line.
+* *Move Up Row* - Move the current line of text up one line.
+* *Move Down Row* - Move the current line of text down one line.
+
 === Formatting
 
-Most formatting options are only applicable to Rich Text documents and can be found in the *Formatting* menu. <<figure-7.02>> 
+Most formatting options are only applicable to Rich Text documents and can be found in the *Formatting* menu. <<figure-7.04>> 
 
-[[figure-7.02]]
-.Figure 7.02
+[[figure-7.04]]
+.Figure 7.04
 {formatting-menu}
 
 *Format Latest* - This will apply the most recently used format option to the selected text.
@@ -126,12 +175,12 @@ Most formatting options are only applicable to Rich Text documents and can be fo
 
 ==== Color
 
-*Text Color Foreground* -  Opens the *Pick a Color* menu, shown in <<figure-7.03>>. The chosen color will be applied to the selected text.
+*Text Color Foreground* -  Opens the *Pick a Color* menu, shown in <<figure-7.05>>. The chosen color will be applied to the selected text.
 
-*Text Color Background* - Opens the *Pick a Color* menu, shown in <<figure-7.03>>. The chosen color will be applied to the background of selected text.
+*Text Color Background* - Opens the *Pick a Color* menu, shown in <<figure-7.05>>. The chosen color will be applied to the background of selected text.
 
-[[figure-7.03]]
-.Figure 7.03
+[[figure-7.05]]
+.Figure 7.05
 {color-pick}
 
 ==== Emphasis
@@ -146,8 +195,8 @@ Most formatting options are only applicable to Rich Text documents and can be fo
 
 ==== Headers
 
-[[figure-7.04]]
-.Figure 7.04
+[[figure-7.06]]
+.Figure 7.06
 {headers}
 
 *Toggle h1 Property* - Styles the selected paragraph as a top-level header. 
@@ -158,8 +207,8 @@ Most formatting options are only applicable to Rich Text documents and can be fo
 
 ==== Misc. Formats
 
-[[figure-7.05]]
-.Figure 7.05
+[[figure-7.07]]
+.Figure 7.07
 {misc-format}
 
 *Toggle Small Property* - Decreases the size of selected text.
@@ -174,21 +223,21 @@ Most formatting options are only applicable to Rich Text documents and can be fo
 
 *Set/Unset Bulleted List* - Formats the selected lines into a bulleted list, in which the item order does not matter.
 
-[[figure-7.06]]
-.Figure 7.06
+[[figure-7.08]]
+.Figure 7.08
 {bulllist}
 
 *Set/Unset Numbered List* - Formats the selected lines into a numbered list, in which the items are ordered.
 
-[[figure-7.07]]
-.Figure 7.07
+[[figure-7.09]]
+.Figure 7.09
 {numlist}
 
 
 *Set/Unset To-Do List* - Formats the selected lines into a list of checkbox items. Click a checkbox to mark it as complete.
 
-[[figure-7.08]]
-.Figure 7.08
+[[figure-7.10]]
+.Figure 7.10
 {todo}
 
 ==== Alignment
@@ -199,24 +248,24 @@ Most formatting options are only applicable to Rich Text documents and can be fo
 
 *Justify Right* - Aligns content to the right side of the page.
 
-*Justify Fill* - Aligns content to the left side of the page and redistributes any empty space at the end of lines to between the words in the paragraph(s). This causes the body of text to fill the complete width of its textbox, demonstrated in <<figure-7.08>>.
+*Justify Fill* - Aligns content to the left side of the page and redistributes any empty space at the end of lines to between the words in the paragraph(s). This causes the body of text to fill the complete width of its textbox, demonstrated in <<figure-7.11>>.
 
-[[figure-7.09]]
-.Figure 7.09
+[[figure-7.11]]
+.Figure 7.11
 {fill}
 
 === Search
 
-Cherrytree's search and replace features can be found in the *Search* menu. <<figure-7.10>>
+Cherrytree's search and replace features can be found in the *Search* menu. <<figure-7.12>>
 
-[[figure-7.10]]
-.Figure 7.10
+[[figure-7.12]]
+.Figure 7.12
 {search-menu}
 
 ==== Steps to Perform a Search:
 
 [start=1]
-. Click *Search*, shown in <<figure-7.10>>, and select one of the following options:
+. Click *Search*, shown in <<figure-7.12>>, and select one of the following options:
 +
 * *Find in Node Content* - Searches for a sequence of characters in the selected node's content.
 * *Find in All Nodes Contents* - Searches for a sequence of characters in the entire node tree.
@@ -236,7 +285,7 @@ NOTE: *Find Again* and *Find Back* are only compatible with the *First From Sele
 ==== Steps to Search and Replace
 
 [start=1]
-. Click *Search*, shown in <<figure-7.10>>, and select one of the following options:
+. Click *Search*, shown in <<figure-7.12>>, and select one of the following options:
 +
 * *Replace in Node Content* - Searches for a sequence of characters in the selected node's content and replaces them with the provided text.
 * *Replace in All Nodes Contents* - Searches for a sequence of characters in the entire node tree and replaces them with the provided text.
@@ -255,8 +304,8 @@ NOTE: *Replace Again* is only compatible with the *First From Selection* and *Fi
 
 ==== Search Options
 
-[[figure-7.11]]
-.Figure 7.11 
+[[figure-7.13]]
+.Figure 7.13 
 {search-menu2}
 
 * *Match Case* - Filter results that do not match the {letter-case}[letter case] of the provided search term.
@@ -273,20 +322,20 @@ NOTE: Learn more about regular expressions {regex-link}[here].
 * *First in All Range* - Return only the first result of the node tree.
 * *Show Iterated Find/Replace Dialog* - Opens the menu below following the search execution:
 +
-[[figure-7.12]]
-.Figure 7.12
+[[figure-7.14]]
+.Figure 7.14
 {iterate-search}
 +
 ** *Close* - Closes the *Iterate Latest Find/Replace* menu.
 ** *Find Previous* - Find the previous instance of the searched term.
 ** *Find Next* - Find the next instance of the searched term.
 ** *Replace* - Replace the current instance of the of the searched term with the replacement provided in *Step 3* of link:#_steps_to_search_and_replace[*Steps to Search and Replace*]. (Applicable only to link:#_search_and_replace[Search and Replace] features.)
-** *Undo* - Undoes the more recent *Replace* execution.
+** *Undo* - Undoes the most recent *Replace* execution.
 
 *Time Filter* options will be available when searching across multiple nodes. Select any option(s) that correspond with your effort, and click the adjacent date(s) to edit its value:
 
-[[figure-7.13]]
-.Figure 7.13
+[[figure-7.15]]
+.Figure 7.15
 {search-menu3}
 
 * *Node Created After* - Only show results from nodes created after the provided date.
